--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						<div class="brands__column">
 							<div class="brands__content block">
 								<div class="block__icon"><img src="img/icons/title/04.png" alt=""></div>
-								<h2 class="block__title">retrò Bike - M. Hulot</h2>
+								<h2 class="block__title">Retro Bikes Is also available</h2>
 								<div class="block__text block__text_j">Lorem Ipsum is simply dummy text of the printing
 									and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
 									ever since the 1500s, when an unknown printer took a galley of type and scrambled it
